# flutter-desktop-embedding

example/: pubspec.yaml
example/linux/: CMakeLists.txt  Makefile  macros.h  main.cc  utils.cc  utils.h
